[project]
name = "nipio"
version = "0.1.0"
description = ""
authors = [{ name = "rs", email = "rs@midearth.co.uk" }]
requires-python = ">=3.9,<4"
classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
    "assertpy>=1.1",
    "mypy>=1.0",
    "pytest>=8.0",
    "ruff>=0.15.18",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.11.23,<0.12.0"]
build-backend = "uv_build"
